<resources>
    <string name="app_name">GoFast</string>
    <string name="i_am_passenger">Je suis passager</string>
    <string name="i_am_driver">Je suis conducteur</string>
    <string name="origin_title">Départ</string>
    <string name="destination_title">Arrivée</string>
    <string name="title_activity_passenger_map">PassengerMap</string>
    <string name="writeDestination">Je saisis ma destination</string>
    <string name="validTravelConf">OK</string>
    <string name="permissionsRationale">La localisation et l\'accès aux services de téléphonie sont indispensables à l\'utilisation de l\'application.</string>
    <string name="permissionsDisabled">Vous pouvez réactiver ces services dans la configuration des applications</string>
    <string name="ok">OK</string>
    <string name="cancel">Quitter</string>
    <string name="tooFarMsg">Vous allez trop loin, GoFast n\'est pas approprié à votre usage</string>
    <string name="tooCloseMsg">Votre destination est trop proche, allez à pied</string>
    <string name="titleAbortCourseDialog">Annulation du trajet</string>
    <string name="textAbortCourseDialog">Êtes-vous sûr de vouloir abandonner votre trajet ?</string>
    <string name="titleAbortTravelDialog">Annulation du déplacement</string>
    <string name="textAbortTravelDialog">Êtes-vous sûr de vouloir abandonner votre déplacement ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="choiceNicknameText">Choisisez votre pseudo GoFast</string>
    <string name="telephoneLabel">Votre téléphone:</string>
    <string name="accountFound">, votre compte a été retrouvé dans GoFast! Appuyez sur OK pour continuer</string>
    <string name="empyNicknameMsg">S\'il vous plaît, choisissez un pseudo pour GoFast</string>
    <string name="nicknameTaken1">Désolé, le pseudo \'</string>
    <string name="nicknameTaken">\' est déjà pris</string>
    <string name="courseInProgress">Trajet en cours</string>
    <string name="travelInProgress">Déplacement en cours</string>
    <string name="refuseCarpool">Refuser</string>
    <string name="acceptCarpool">Accepter</string>
    <string name="carpoolingDemandText">Vous avez une demande de covoiturage</string>
    <string name="pickupLabel">RDV</string>
    <string name="dropoffLabel">Depot</string>
    <string name="serverUnavailable">GoFast ne peut pas se connecter au serveur, ressayez plus tard</string>
    <string name="canceledCarpoolTitle">Covoiturage annulé</string>
    <string name="canceledCarpoolText">" a annulé le covoiturage demandé"</string>
    <string name="conflictText">" a levé un litige pour ce covoiturage"</string>
    <string name="conflictTitle">Litige</string>
    <string name="btDetailsTxt">Details</string>
    <string name="btRequestTxt">Demander</string>
    <string name="title_activity_guide_passenger">Map</string>

    <string name="new_carpooling_request_notification_title">Demande de covoiturage</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_carpooling_request_notification_text">Vous avez une nouvelle demande de covoiturage
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="fareLabel">Tarif</string>
    <string name="timeLabel">Heure</string>
    <string name="passengerLabel">Passager</string>
    =======

    <string name="general_foreground_notification_title_template">General foreground: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="general_foreground_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="serverUnavailableTitle">Serveur inaccessible</string>
    <string name="yourPossition">Vous êtes ici</string>
    <string name="title_activity_carpooling_details">Map</string>
    <string name="requestCarpoolLabel">Demander covoiturage</string>
    <string name="cancelRequestLabel">Annuler demande</string>
    <string name="abortCarpoolingLabel">Annuler covoiturage</string>
    <string name="emptyCarpoolingsList">Recherche de covoiturages en cours.</string>
    <string name="radiusLabel">Je peux marcher jusqu\'à</string>
    <string name="conflict_carpooling_notification_text">" a annulé son covoiturage"</string>
    <string name="carpoolingCanceled">Annulation de covoiturage</string>
    <string name="carpoolingRequest">Demande de covoiturage</string>
    <string name="validate_end_carpool">Valider fin</string>
    >>>>>>> 0d1dfedd8114708620bef33ee1a087165ca9a337
</resources>
